# feather-test

./: CustomTestServers.md  README.md  jake.html  pyproject.toml  run.py  script.py  showcase.md  test_report.html
duck_test/: __init__.py  cli.py  event_driven_unittest.py  events.py  test_server.py  unittest.py
duck_test/reporters/: __init__.py  default_reporter.py  json_reporter.py
duck_test/test_servers/: __init__.py  test_server.py
feather_test/: cli.py  event_driven_unittest.py  events.py
feather_test/reporters/: console_reporter.py  reporter_proxy.py
feather_test/utils/: reporter_loader.py
jerry/: test_run_20240916_175940.json
mallard/: __init__.py
my_test_reports/: my_test_run.json
test_multiple_tests/: test_medium.py
test_one_test/: test_fast.py
test_tests/: test_fast.py
tests/: test_end_to_end.py  test_parameterized.py  test_random.py  test_setup_teardown.py  test_slow.py
