[tool.poetry]
name = "duck-test"
version = "0.1.0"
description = "An event-driven testing framework for Python"
authors = ["Jason Sanders <me@fictitiouswizard.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://git.fictitiouswizard.com/fictitiouswizard/duck-test"
repository = "https://git.fictitiouswizard.com/fictitiouswizard/duck-test"
documentation = "https://duck-test.readthedocs.io"
keywords = ["testing", "unittest", "event-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "duck_test" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
duck-test = "duck_test.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yourusername/duck-test/issues"
